<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <fragment
        android:id="@+id/city_fragment"
        android:name="myApp.test1.CityFragment"
        android:layout_width="408dp"
        android:layout_height="373dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints"
        tools:layout="@layout/city_layout" />


    <fragment
        android:id="@+id/settings_fragment"
        android:name="myApp.test1.SettingsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout="@layout/settings_layout"
        tools:layout_editor_absoluteY="153dp" />

    <TextView
        android:id="@+id/nameCity"
        android:layout_width="227dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:text="@string/notAdd"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:text="@string/temperature"
        android:textColor="#87CEFA"
        app:layout_constraintEnd_toStartOf="@+id/buttonCity"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/nameCity"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCity"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:orientation="horizontal"
        android:text="@string/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Подробный прогноз"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:text="@string/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCity" />

</androidx.constraintlayout.widget.ConstraintLayout>